force-app/main/default/objects/conference360__Badge_Printing_Configuration_Details__c/conference360__Badge_Printing_Configuration_Details__c.object-meta.xml
<CustomObject>
    <description>Configure how event badges should be printed.</description>
    <label>Badge Printing Configuration Detail</label>
    <nameField>
        <displayFormat>BPCD-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badge Printing Configuration Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>