force-app/main/default/objects/conference360__Badge_Printing_Configuration_Details__c/fields/conference360__Badge_Printing_Configuration__c.field-meta.xml
<CustomField>
    <fullName>conference360__Badge_Printing_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Badge Printing Configuration for this Detail record.</description>
    <inlineHelpText>The Badge Printing Configuration for this Detail record.</inlineHelpText>
    <label>Badge Printing Configuration</label>
    <referenceTo>conference360__Badge_Printing_Configuration__c</referenceTo>
    <relationshipName>Badge_Printing_Configuration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>