force-app/main/default/objects/conference360__Badge_Printing_Configuration_Details__c/fields/conference360__Field__c.field-meta.xml
<CustomField>
    <fullName>conference360__Field__c</fullName>
    <description>The field to be displayed on the Badge</description>
    <inlineHelpText>The field to be displayed on the Badge</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>