force-app/main/default/objects/conference360__Badge_Printing_Configuration_Details__c/fields/conference360__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sort_Order__c</fullName>
    <description>The order in which this field should show on the badge</description>
    <inlineHelpText>The order in which this field should show on the badge</inlineHelpText>
    <label>Sort Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>14</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
            <value>
                <fullName>17</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>19</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>