force-app/main/default/objects/conference360__Badge_Printing_Configuration_Details__c/fields/conference360__Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Type__c</fullName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>